# agent-browser-

./: .gitignore  COMPREHENSIVE_REVIEW.md  LICENSE  README.md  VIBESTUDIO_DEEP_REVIEW.md  index.html  mcp-stdio-bridge.mjs  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
public/: privacy.html  terms.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  mcp_server.rs  tab_manager.rs
src/components/: DownloadsPanel.tsx  FindBar.tsx  HistoryPage.tsx  IdeConnectPage.tsx  LoadingBar.tsx  NewTabPage.tsx  SettingsPage.tsx  TabBar.tsx  Toast.tsx  UrlBar.tsx
