[package]
name = "app"
version = "0.1.0"
description = "VibeStudio - AI Browser for Developers"
authors = ["VibeStudio"]
license = "MIT"
repository = "https://github.com/yourusername/vibestudio"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcp_bridge"
path = "src/bin/mcp_bridge.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.10.3", features = ["unstable"] }
tauri-plugin-log = "2"
url = "2.5"
urlencoding = "2.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
